AUTOMAKE_OPTIONS = foreign

lib_LIBRARIES = libwebrtc_utility.a

INCLUDES = -I../../../

DEFS = -D_DEBUG -DWEBRTC_POSIX -DWEBRTC_LINUX -std=gnu++11

libwebrtc_utility_a_SOURCES = source/audio_frame_operations.cc\
source/coder.cc\
source/file_player_impl.cc\
source/file_recorder_impl.cc\
source/frame_scaler.cc\
source/process_thread_impl.cc\
source/rtp_dump_impl.cc\
source/video_coder.cc\
source/video_frames_queue.cc
