AUTOMAKE_OPTIONS = foreign

lib_LIBRARIES = libaudio_coding_module.a

INCLUDES = -I../../../../

DEFS = -D_DEBUG -DWEBRTC_POSIX -DWEBRTC_LINUX -std=gnu++11

libaudio_coding_module_a_SOURCES = acm2/acm_amr.cc\
acm2/acm_amrwb.cc\
acm2/acm_cng.cc\
acm2/acm_codec_database.cc\
acm2/acm_dtmf_playout.cc\
acm2/acm_g7221.cc\
acm2/acm_g7221c.cc\
acm2/acm_g722.cc\
acm2/acm_g7291.cc\
acm2/acm_g729.cc\
acm2/acm_generic_codec.cc\
acm2/acm_gsmfr.cc\
acm2/acm_ilbc.cc\
acm2/acm_isac.cc\
acm2/acm_opus.cc\
acm2/acm_pcm16b.cc\
acm2/acm_pcma.cc\
acm2/acm_pcmu.cc\
acm2/acm_receiver.cc\
acm2/acm_red.cc\
acm2/acm_resampler.cc\
acm2/acm_speex.cc\
acm2/audio_coding_module.cc\
acm2/audio_coding_module_impl.cc\
acm2/call_statistics.cc\
acm2/initial_delay_manager.cc\
acm2/nack.cc
