AUTOMAKE_OPTIONS = foreign

lib_LIBRARIES = librtp_rtcp.a

INCLUDES = -I../../../../

AM_CXXFLAGS = -DWEBRTC_POSIX -std=gnu++11

AM_CXXFLAGS += 

librtp_rtcp_a_SOURCES = bitrate.cc\
dtmf_queue.cc\
fec_receiver_impl.cc\
fec_test_helper.cc\
forward_error_correction.cc\
forward_error_correction_internal.cc\
producer_fec.cc\
receive_statistics_impl.cc\
remote_ntp_time_estimator.cc\
rtcp_packet.cc\
rtcp_receiver.cc\
rtcp_receiver_help.cc\
rtcp_sender.cc\
rtcp_utility.cc\
rtp_format.cc\
rtp_format_h264.cc\
rtp_format_video_generic.cc\
rtp_format_vp8.cc\
rtp_header_extension.cc\
rtp_header_parser.cc\
rtp_packet_history.cc\
rtp_payload_registry.cc\
rtp_receiver_audio.cc\
rtp_receiver_impl.cc\
rtp_receiver_strategy.cc\
rtp_receiver_video.cc\
rtp_rtcp_impl.cc\
rtp_sender_audio.cc\
rtp_sender.cc\
rtp_sender_video.cc\
rtp_utility.cc\
ssrc_database.cc\
tmmbr_help.cc\
vp8_partition_aggregator.cc
